--- a/backEnd/src/main/resources/config.properties
+++ b/backEnd/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:8080/
-spring.datasource.username=tjee1234
+spring.datasource.url=jdbc:mysql://localhost:3306/todolist
+spring.datasource.username=todolist
 spring.datasource.password=tjee1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
