--- a/backEnd/src/main/resources/application.properties
+++ b/backEnd/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-spring.application.name=backend
+# Server Configuration
+server.port=8080
+
+# MyBatis Configuration
+mybatis.mapper-locations=classpath:mappers/**/*.xml
+
+# Logging Configuration
+logging.level.edu.thejoeun.todo=DEBUG
+logging.level.org.springframework.web=INFO
+
+# Spring Scheduling
+spring.task.scheduling.pool.size=5
+
+# File Upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
