--- a/backEnd/src/main/resources/config.properties
+++ b/backEnd/src/main/resources/config.properties
@@ -1,10 +1,14 @@
+# Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/todolist
 spring.datasource.username=todolist
 spring.datasource.password=tjee1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Hikari Configuration
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.idle-timeout=60000
 spring.datasource.hikari.pool-name=MyHikariCP
 spring.datasource.hikari.auto-commit=false
+
+
